<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">YouTube_Downloader</string>
    <string name="start_text">Enter the YouTube link to download the video</string>
    <string name="start_button">Download</string>
    <string name="toast_done">Done!</string>
    <string name="toast_url_err">Url error!</string>
    <string name="toast_url">Enter the url!</string>
    <string name="toast_download">Downloading...</string>
    <string name="video">Video</string>
    <string name="only_audio">Only_audio</string>
    <string name="playlist">playlist(BETA)</string>
    <string name="coffee">Support</string>
    <string name="love_text">Support the project</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="set_debug">Debug mode</string>
    <string name="set_lib">Use pytubefix</string>
    <string name="set_theme">Dynamic colors</string>
    <string name="set_rutube">Use rutube</string>
    <string name="input_text">url</string>






    <string name="telegram_link">t.me/EN_yt_downloader_SW</string>
    <string name="telegram_linkV">https://t.me/EN_yt_downloader_SW</string>

    <string name="version_name">version</string>
    <string name="version_code">version code</string>
    <string name="build_DEV">DEV build</string>
    <string name="build">RELEASE build</string>


    <string name="channel_name">RELEASE build</string>
    <string name="channel_description">RELEASE build</string>

    <string name="github">This app is open source on github. Developer == Soviet_Wave</string>
    <string name="github_link">https://github.com/MrArtemIT/YouTube_downloader</string>
</resources>